--- a/index.html
+++ b/index.html
@@ -2,28 +2,29 @@
 <html lang="en" >
 
 <head>
-  <meta charset="UTF-8">
-  <title>星云少数派</title>
-  <script type="text/javascript" src="https://cdn.bootcss.com/vue/2.5.17-beta.0/vue.min.js"></script>
-  <script type="text/javascript" src="lib/nebPay.js"></script> 
+<meta charset="UTF-8">
+<title>星云少数派</title>
+<link rel="icon" href="./favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+<script type="text/javascript" src="https://cdn.bootcss.com/vue/2.5.17-beta.0/vue.min.js"></script>
+<script type="text/javascript" src="lib/nebPay.js"></script> 
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css'>
 <link rel="stylesheet" href="https://unpkg.com/iview/dist/styles/iview.css">
-    <script src="https://unpkg.com/iview/dist/iview.min.js"></script>
-<link rel="stylesheet" href="css/style.css">
-  
+<script src="https://unpkg.com/iview/dist/iview.min.js"></script>
+<link rel="stylesheet" href="css/style.css"> 
 </head>
-
 <body>
 
   <div class="container" id="app">
   <i-header>
-    <h1>星云少数派</h1>
+    <div class="layout-logo"><h4>星云少数派</h4>
+    </div>
   </i-header>
   <i-content>
 <Card>
 <div slot="title">
   <p>一道选择题,给你两个选择,你的选择是奇葩的还是大多数？</p>
-  <p>参与规则:最低支付0.001NAS即可参与答题,21:00以后统计a,b选项的人数，人数少的即为少数派，平均瓜分当日的所有奖金。人数相等则返还参与奖金。</p>
+  <p>参与规则:只需要支付0.001NAS即可参与答题,21:00以后统计a,b选项的人数，人数少的即为少数派，平均瓜分当日的所有奖金。人数相等则返还参与奖金。</p>
   <p>答题时间:每日0：00-21：00</p>
   <p>开奖时间:每日21：00以后</p>
 </div>
@@ -47,10 +48,10 @@
   <Row>
     <Col span="11" offset="2">
         <Card shadow>
-            <p slot="title">爪哇犀牛还是印度黑羚</p>
+            <p slot="title">{{quize.question}}</p>
             <Radio-group v-model="selection">
-                <Radio label="a"><span>爪哇犀牛</span></Radio>
-                <Radio label="b"><span>印度黑羚</span></Radio>
+                <Radio label="a"><span>{{quize.opt1}}</span></Radio>
+                <Radio label="b"><span>{{quize.opt2}}</span></Radio>
             </Radio-group>
         </Card>
     </Col>
@@ -75,20 +76,24 @@
 </i-content>
 <i-footer>
       <span>
-        <Avatar src="img/creabine.jpg" shape="square" size="large" />
+        <Avatar src="https://avatars0.githubusercontent.com/u/10058453" shape="square" size="large" />
       </span>
       <span>Author: kagawaCaicai</span>
-      <span>Created in 2018/5/7</span>
   </i-footer>
  </div>
-
+ <script src="./quize.js"></script>
  <script>
   var NebPay = require("nebpay");
   var nebPay = new NebPay();
   let vm = new Vue({
     el: '#app',
     data: {
-        dappAddress: "n1pR76TNoeMtLSd5hSX2ABdWVYUqDXGm4UN",
+        quize:{
+        question:"爪哇犀牛还是印度黑羚?",
+        opt1:"爪哇犀牛",
+        opt2:"印度黑羚"
+    },
+        dappAddress: "n1eC65oVPeBsuE9mTbQ8AxqzmSapFydME18",
         columns1: [
                     {
                         title: '支付地址',
@@ -124,25 +129,21 @@
             return true;
         },
         getBackClick:function(){
-            // if(this.hour <21){
-            //     this.$Modal.success({
-            //         title: '',
-            //         content: '还没到开奖时候21:00哦，请耐心等待',
-            //         width: 600,
-            //     })
-            //     return;
-            // }
-            console.log('call get back');
+            if(this.hour <21){
+                this.$Modal.success({
+                    title: '',
+                    content: '还没到开奖时候21:00哦，请耐心等待',
+                    width: 600,
+                })
+                return;
+            }
             var to = this.dappAddress;
             var value = "0";
-            var callFunction = "participate";
-            var callArgs = [this.selection];
+            var callFunction = "distribution";
+            var callArgs = [""];
             nebPay.call(to, value, callFunction, JSON.stringify(callArgs), {    //使用nebpay的call接口去调用合约,
-                listener: this.getBackNas
+                listener: this.submitCb
             });
-        },
-        getBackNas:function(resp){
-            console.log(JSON.stringify(resp.result));
         },
         pay:function(){
             if (typeof(webExtensionWallet) === "undefined") {
@@ -160,8 +161,8 @@
         submitCb:function(resp){
             let _this = this;
             this.$Modal.success({
-            title: '参与成功',
-            content: '新参与的用户需要进行区块确认，这可能会花费几十秒钟的时间。</br>你可以在<a href="https://wallet.nasscan.io/check.html" target="_blank">https://wallet.nasscan.io/check.html</a>中</br>使用<code>'+resp.txhash+'</code>查询进度！',
+            title: '提交成功',
+            content: '需要进行区块确认，这可能会花费几十秒钟的时间。</br>你可以在<a href="https://wallet.nasscan.io/check.html" target="_blank">https://wallet.nasscan.io/check.html</a>中</br>使用<code>'+resp.txhash+'</code>查询进度！',
             width: 600,
             onOk:_this.initialize,
             })
@@ -180,12 +181,16 @@
 
             var callArgs = JSON.stringify([""])
             var _this = this;
+
             nebPay.simulateCall(to, value, callFunction, callArgs, {    //使用nebpay的simulateCall接口去执行get查询, 模拟执行.不发送交易,不上链
                 listener: function(resp){
                     var result = resp.result;
                     var resultObj = JSON.parse(result);
-                    _this.day = resultObj.day;  // initialize day and hour
+                    var day = resultObj.day
+                    _this.day = day;  // initialize day and hour
                     _this.hour = resultObj.hour;
+                    var idx = day%[raw_data.length];
+                    _this.quize = raw_data[idx];
                 }
             });
             callFunction = "memberList";
